--- a/index.html
+++ b/index.html
@@ -6,54 +6,67 @@
   <title>Tantalising Bites Menu</title>
 </head>
 <body>
-  <h1>Delicious Bites Menu</h1>
-
+  <h1>Tantalising Bites Menu</h1>
     <h2>Appetizers</h2>  
-
   <ul>     
 
    <li>          
+    <strong>Caprese Salad</strong>:       
+    <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p> 
+    </li>
 
-  <strong>Caprese Salad</strong>       
+    <li>
+    <strong>Garlic Bread</strong>:
+    <p>Warm, crusty bread topped with garlic butter.</p>
+    </li>
 
-     <p>Fresh tomatoes, mozzarella, and basil drizzled with balsamic glaze.</p> 
-
-       </li>    
-
-    <!-- Add two more appetizer items with descriptions --> 
+    <li>
+    <strong>Bruschetta</strong>:
+    <p>Toasted bread topped with fresh tomatoes, basil, and olive oil.</p>
+    </li>   
 
    </ul>  
 
   <h2>Main Courses</h2> 
 
-   <ul>   
+   <ul>  
 
      <li>      
-
-      <strong>Grilled Salmon</strong>     
-
+      <strong>Grilled Salmon</strong>:     
        <p>Salmon fillet seasoned and grilled to perfection, served with lemon butter sauce.</p>   
-
      </li>     
+   
+    <li>
+      <strong>Margherita Pizza</strong>:
+      <p>Classic pizza with tomato sauce, mozzarella cheese, and fresh basil.</p>
+    </li>
 
-   <!-- Add two more main course items with descriptions --> 
+    <li>
+      <strong>Spaghetti Carbonara</strong>:
+      <p>Pasta with pancetta, eggs, and Parmesan cheese.</p>
+    </li>
 
    </ul>   
 
- <h2>Desserts</h2>  
-
+ <h2>Desserts</h2>
+   
   <ul>     
 
    <li>    
+      <strong>Chocolate Fondue</strong>:     
+      <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>    
+   </li>    
+      
+   <li>
+      <strong>Tiramisu</strong>:
+      <p>Layers of ladyfingers soaked in coffee and layered with mascarpone cream.</p>
+    </li>
 
-        <strong>Chocolate Fondue</strong>     
-
-       <p>Assorted fruits and marshmallows served with rich chocolate fondue.</p>    
-
-    </li>    
-
-    <!-- Add two more dessert items with descriptions -->  
-
+    <li>
+      <strong>Chocolate Lava Cake</strong>:
+      <p>Warm chocolate cake with a molten chocolate center served with vanilla ice cream.</p>
+    </li>
+    
   </ul> 
 
    <p><a href="contact.html">Contact us for reservations</a></p> 
